        - Fix: The content of blockquote is displayed. (hebasta) 
        - Upgrade dependency and remove deprecated
          method. (diewald)
        - Add configuration option for defaults: items_per_page, context.
          (diewald)
        - Support for inline-markers in snippets. (see Krill #132; diewald)
        - Added CQP tutorial (part 1; irimia, hebasta, margaretha, diewald)

0.52 2023-11-29
        - Update Piwik dependency to point to matomo.js. (diewald)
        - Add addon to title and description. (diewald)
        - Improve Dockerfile to enable docker-slim. (diewald)
        - Introduce maintenance tag helper. (diewald)
        - Fix: Remembers the last position in the tutorial. (hebasta)

0.51 2023-09-27
        - Support defined log file in configuration. (diewald)
        - Remove experimental_client_registration setting
          and make client registration mandatory in OAuth
          (diewald)
        - Introduce 'reserved terms' in documentation (diewald)
        - Support CQP in frontend (diewald)
        - Fix support for dot-symbols in (corpus/doc/text)-IDs
          (diewald)
        - Update information regarding CSP in conf (diewald)
        - Support NKJP named entities in annotation helper
          (diewald)
        - Marketplace to install and uninstall plugins (hebasta)

0.50 2023-05-08
        - Improvement of NKJP-annotation helper. (diewald)
        - Add redirect-uri to client view. (diewald)
        - Added german translation for Cosmas-II. (hebasta)
        - Workaround for failing utf8 test in some
          environments (fixes #197). (diewald)
        - Require at least conllu2korapxml v0.6.1. (diewald)
        - Improve redirection on all authorization calls. (diewald)
        - Redirect-URIs are required to be absolute
          by newer versions of Kustvakt. (diewald)
        - Newer versions of Kustvakt disabled default
          scope on authorization requests. (diewald)
        - Introduce logo addon. (diewald)