@@ -17,6 +17,7 @@
           (diewald)
         - Support for inline-markers in snippets. (see Krill #132; diewald)
         - Added CQP tutorial (part 1; irimia, hebasta, margaretha, diewald)
+        - Improve footer responsiveness. (diewald)
 
 0.52 2023-11-29
         - Update Piwik dependency to point to matomo.js. (diewald)
